--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "petshop-express",
+  "quokka": {
+    "babel": true
+  },
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,4 +16,5 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   }
+
 }
